force-app/main/default/objects/ActionPlan__c/fields/Account_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Account_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Account process to close AP tasks when account is deactivated.</description>
    <label>Account Deactivated</label>
    <type>Checkbox</type>
</CustomField>