force-app/main/default/objects/ActionPlan__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan Template</label>
    <referenceTo>ActionPlanTemplate__c</referenceTo>
    <relationshipName>R00NR0000000VbUtMAK</relationshipName>
    <type>Lookup</type>
</CustomField>