force-app/main/default/objects/ActionPlan__c/fields/CommentsRT__c.field-meta.xml
<CustomField>
    <fullName>CommentsRT__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>