force-app/main/default/objects/ActionPlan__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <description>The number of completed tasks of the Action Plan.</description>
    <inlineHelpText>The number of completed tasks of the Action Plan.</inlineHelpText>
    <label>Completed</label>
    <summaryFilterItems>
        <field>APTaskTemplate__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>APTaskTemplate__c.Action_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>