force-app/main/default/objects/ActionPlan__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>&apos;ss&apos;</formula>
    <label>Contract End Date</label>
    <type>Text</type>
</CustomField>