force-app/main/default/objects/ActionPlan__c/fields/FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>FiscalYear__c</fullName>
    <label>Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>