force-app/main/default/objects/ActionPlan__c/fields/Task_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Task_Status_Formula__c</fullName>
    <formula>TEXT(Completed__c ) &amp; &quot; of &quot; &amp;  text(Total__c) &amp; &quot; Completed&quot;</formula>
    <label>Overall Task Status</label>
    <type>Text</type>
</CustomField>